fix: Adjust the z-index of the Binder popup

--- a/thaw_components/src/binder/binder.css
+++ b/thaw_components/src/binder/binder.css
@@ -9,5 +9,5 @@
 
 .thaw-binder-follower-content {
     position: absolute;
-    z-index: 2000;
+    z-index: 1000000;
 }
